k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog-server
spec:
  rules:
  - host: file.ivanouo.one
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: file
            port:
              number: 80

  - host: gateway.ivanouo.one
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gateway
            port:
              number: 80
